# wtfi2

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  release.yml
src/: cli.rs  diagnose.rs  engine.rs  json.rs  lib.rs  main.rs  render.rs
src/model/: mod.rs  path.rs  status.rs
src/platform/: corewlan.rs  macos.rs  mod.rs
src/probe/: captive.rs  dns.rs  gateway.rs  link.rs  mod.rs  net.rs  vpn.rs  wan.rs
src/ui/: dashboard.rs  mod.rs
