[package]
name = "wtfi2"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "What The F*ck Internet — a live, visual network path diagnostic that pinpoints exactly where your connection dies."
license = "MIT"
repository = "https://github.com/kanywst/wtfi2"
homepage = "https://github.com/kanywst/wtfi2"
readme = "README.md"
keywords = ["network", "wifi", "diagnostic", "tui", "macos"]
categories = ["command-line-utilities"]

[[bin]]
name = "wtfi"
path = "src/main.rs"

[lib]
name = "wtfi2"
path = "src/lib.rs"

[dependencies]
# TUI + terminal
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "time", "sync"] }
futures = "0.3"
# errors
color-eyre = "0.6"
# probes
hickory-resolver = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# cli + serialization
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# CoreWLAN for instant link telemetry (RSSI/noise/channel/PHY) without the
# multi-second system_profiler spawn.
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString"] }
objc2-core-wlan = { version = "0.3", default-features = false, features = ["std", "CWInterface", "CWWiFiClient", "CWChannel", "CoreWLANTypes"] }

[dev-dependencies]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
# Package debug symbols into .dSYM bundles for macOS release artifacts.
# (lto is inherited from [profile.release], so it isn't repeated here.)
split-debuginfo = "packed"
